토큰 확률 얻기

--- a/study.ipynb
+++ b/study.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "5ae7601d",
    "metadata": {},
    "outputs": [],
@@ -286,11 +286,268 @@
    "source": [
     "print(f'overlapping chunking approach has {len(split)} documents with average length {avg_length:.1f} tokens')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cd1337e",
+   "metadata": {},
+   "source": [
+    "### 감정 훈련 데이터를 위한 JSONL 파일 생성"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "cd501805",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import load_dataset\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 아마존 리뷰 다중 언어 데이터셋을 로드\n",
+    "# dataset = load_dataset(\"amazon_reviews_multi\", \"all_languages\")\n",
+    "dataset = load_dataset('amazon_polarity')\n",
+    "\n",
+    "#데이터셋의 'train' 서브셋을 pandas DataFrame\n",
+    "training_df = pd.DataFrame(dataset['train'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "00167d89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_df_s = training_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6b2635ee-4854-4bb9-8527-56e95e409fb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>title</th>\n",
+       "      <th>content</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Stuning even for the non-gamer</td>\n",
+       "      <td>This sound track was beautiful! It paints the ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>The best soundtrack ever to anything.</td>\n",
+       "      <td>I'm reading a lot of reviews saying that this ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Amazing!</td>\n",
+       "      <td>This soundtrack is my favorite music of all ti...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Excellent Soundtrack</td>\n",
+       "      <td>I truly like this soundtrack and I enjoy video...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Remember, Pull Your Jaw Off The Floor After He...</td>\n",
+       "      <td>If you've played the game, you know how divine...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   label                                              title  \\\n",
+       "0      1                     Stuning even for the non-gamer   \n",
+       "1      1              The best soundtrack ever to anything.   \n",
+       "2      1                                           Amazing!   \n",
+       "3      1                               Excellent Soundtrack   \n",
+       "4      1  Remember, Pull Your Jaw Off The Floor After He...   \n",
+       "\n",
+       "                                             content  \n",
+       "0  This sound track was beautiful! It paints the ...  \n",
+       "1  I'm reading a lot of reviews saying that this ...  \n",
+       "2  This soundtrack is my favorite music of all ti...  \n",
+       "3  I truly like this soundtrack and I enjoy video...  \n",
+       "4  If you've played the game, you know how divine...  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_df_s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5848ac4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_7616\\1335550975.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['prompt'] = df['title'] + '\\n\\n' + df['content'] + '\\n\\n###\\n\\n'\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_7616\\1335550975.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['completion'] = ' ' + df['label'].astype(str)\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_7616\\1335550975.py:13: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  english_df.drop_duplicates(subset=['prompt'], inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def prepare_df_for_openai(df):\n",
+    "    \n",
+    "    # 'reviw_title' 과 'review_body' 열을 결합하고,\n",
+    "    # 끝에 맞춤형 접미사 '\\n\\n###\\n\\n'를 추가하여 'prompt'열을 생성\n",
+    "    df['prompt'] = df['title'] + '\\n\\n' + df['content'] + '\\n\\n###\\n\\n'\n",
+    "\n",
+    "    # 'stars' 값 앞에 공백을 추가함으로써 새로운 'completion' 열을 생성\n",
+    "    df['completion'] = ' ' + df['label'].astype(str)\n",
+    "\n",
+    "    english_df = df\n",
+    "\n",
+    "    # 'prompt' 열을 기준으로 중복 행을 제거\n",
+    "    english_df.drop_duplicates(subset=['prompt'], inplace=True)\n",
+    "\n",
+    "    return english_df[['prompt', 'completion']].sample(len(english_df))\n",
+    "    \n",
+    "english_training_df = prepare_df_for_openai(training_df_s)\n",
+    "\n",
+    "english_training_df.to_json(\"amazon-english-full-train-sentiment.jsonl\", orient='records', lines=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36411111",
+   "metadata": {},
+   "source": [
+    "### OpenAI API로부터 토큰 확률 얻기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ac32a303-51eb-45e1-919b-673a6cbe11b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df = pd.DataFrame(dataset['test'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "faab840d-1bb4-45d7-8b43-36184abbfa1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "english_test_df = prepare_df_for_openai(test_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "d2b9b44d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "from openai import OpenAI\n",
+    "import pandas as pd\n",
+    "\n",
+    "# OpenAI API 키 설정\n",
+    "api_key = config['openai_key']\n",
+    "client = OpenAI(api_key=api_key)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 샘플 프롬프트 가져오기\n",
+    "prompt = english_test_df['prompt'].sample(1).iloc[0]\n",
+    "\n",
+    "# 파인튜닝된 모델을 사용하여 완성본 생성하기\n",
+    "response = client.chat.completions.create(\n",
+    "    # model='ada:ft-personal-2023-03-31-05-30-46',\n",
+    "    model= 'gpt-3.5-turbo',\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "        {\"role\": \"user\", \"content\": prompt}\n",
+    "    ],\n",
+    "    max_tokens=1,\n",
+    "    temperature=0,\n",
+    "    logprobs=True\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# 결과 처리\n",
+    "probs = []\n",
+    "logprobs = response.choices[0].logprobs.content[0].top_logprobs\n",
+    "    \n",
+    "for logprob in logprobs:\n",
+    "    _probs = {}\n",
+    "    for key, value in logprob.items():\n",
+    "        _probs[key] = math.exp(value)\n",
+    "    probs.append(_probs)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llm_pj",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
